# rtl-buddy-axi-profiler

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: axi-bundles-schema.md  axi-perf-schema.md  axi-stream-format.md  fst-pipeline.md  pipeline.md
scripts/: fetch_verible.py
src/rtl_buddy_axi_profiler/: __init__.py  _verible.py  _verible_install.py  cli.py  types.py
src/rtl_buddy_axi_profiler/notebook/: README.md  __init__.py  plots.py  sync.py  template.py
src/rtl_buddy_axi_profiler/schema/: axi_bundles_v1.json  axi_perf_v1.json  axi_stream_v1.md
src/rtl_buddy_axi_profiler/stages/: protocol.py
src/rtl_buddy_axi_profiler/stages/aggregate/: standard.py
src/rtl_buddy_axi_profiler/stages/discover/: __init__.py  _clock_pin.py  _emit.py  _load.py  _regex_detector.py  _summary.py  _sv_parser.py  verible.py
src/rtl_buddy_axi_profiler/stages/emit/: json_v1.py  txns_parquet_v1.py
src/rtl_buddy_axi_profiler/stages/gen_monitor/: __init__.py  generator.py
src/rtl_buddy_axi_profiler/stages/gen_monitor/templates/: axi_perf_mon.sv.j2
src/rtl_buddy_axi_profiler/stages/ingest/: _clock_detect.py  stream.py  wellen.py
src/rtl_buddy_axi_profiler/stages/reconstruct/: axi4.py
tests/: _e2e_diff.py  _vcd_helpers.py  test_aggregate.py  test_clock_pin.py  test_discover.py  test_e2e_diff.py  test_e2e_run.py  test_emit_json_v1.py  test_emit_txns_parquet_v1.py  test_gen_monitor.py  test_ingest_preedge_handshake.py  test_ingest_stream.py  test_ingest_wellen.py  test_load_manifest.py  test_notebook_plots.py  test_notebook_sync.py  test_notebook_template.py  test_reconstruct_axi4.py  test_schema_validation.py  test_verible_install.py  test_verible_wrapper.py
tests/fixtures/discover/single_pair/: cpu.sv  dram.sv  filelist.f  soc_top.sv
tests/fixtures/e2e/: _build.py  build_fixtures.py
tests/fixtures/e2e/crossbar_2x2/: axi-bundles.yaml  axi-perf.json.golden  dump.vcd
tests/fixtures/e2e/errors/: axi-bundles.yaml  axi-perf.json.golden  dump.vcd
tests/fixtures/e2e/out_of_order/: axi-perf.json.golden  dump.vcd  expected_latencies.txt
tests/fixtures/e2e/single_master_single_slave/: axi-bundles.yaml  axi-perf.json.golden  dump.vcd
