[project]
name = "rtl-buddy-axi-profiler"
version = "0.1.0"
description = "AXI / APB / AHB interconnect performance profiler; consumed by rtl-buddy-view's axi-perf overlay."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "Loh Zhi-Hern", email = "expsg-hern@users.noreply.github.com" }
]
dependencies = [
    "typer>=0.25.1",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "pywellen>=0.20.5",
    "jinja2>=3.1.6",
]

# Future runtime deps gated as optional extras so the default install
# stays light. See AGENTS.md "Runtime dependencies" for the policy.
#
# [fst]:     used by stages/ingest/fst.py — see issue #3.
#            Tentative pick (pyfst vs pylibfst) decided in #3 once we
#            benchmark on the 1 GB fixture.
# [verible]: used by stages/discover/verible.py — see issue #2.
#            Profiler links libverible directly (no rtl_buddy dep);
#            final binding name confirmed in #2.
# [parquet]: used by stages/emit/txns_parquet_v1.py — see issue #17.
#            Drives the per-transaction parquet artifact that the
#            marimo notebook drill-down (umbrella #16) consumes.
# [notebook]: used by notebook/template.py — see issue #18. Marimo
#            notebook template + altair plot library that loads the
#            parquet emitted under [parquet] and renders the v1
#            drill-down charts. Polars over pandas: lazy frames keep
#            zoom/brush snappy on the row counts we expect.
[project.optional-dependencies]
fst = []
verible = []
parquet = ["pyarrow>=14"]
notebook = [
    "marimo>=0.9",
    "altair>=5",
    "polars>=1.0",
    "pyarrow>=14",
    # pandas is altair's internal serialization backend for some
    # chart-construction paths (transform_window CDF, certain mark
    # types). Polars covers our actual data ops; pandas just keeps
    # altair happy without forcing the user to install it manually.
    "pandas>=2",
]

[project.scripts]
axi-profiler = "rtl_buddy_axi_profiler:main"

[project.entry-points."rtl_buddy_axi_profiler.stages"]
# Built-in stage registrations. Subsequent issues populate these as
# their respective stages land; bootstrap ships the registry only.
# See stages/protocol.py for the interface contracts.

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "mypy>=2.1.0",
    "ruff>=0.11.0",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.0",
]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "E7", "E9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
files = ["src/rtl_buddy_axi_profiler"]

# pywellen is the Rust-backed Wellen binding; it doesn't ship a
# py.typed marker. Allow imports without stubs rather than vendor
# a fake stubfile here.
[[tool.mypy.overrides]]
module = "pywellen"
ignore_missing_imports = true

# pyarrow lives under the [parquet] optional extra; the lint job
# doesn't install extras, so its imports are unresolvable. The
# txns_parquet_v1 module guards every import behind a try/except
# anyway — typecheck only the surrounding contract.
[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.parquet"]
ignore_missing_imports = true

# marimo / altair / polars / pandas live under the [notebook]
# optional extra (same lint-doesn't-install-extras reasoning). The
# notebook subpackage guards them at module level so the rest of
# the package imports without them installed.
[[tool.mypy.overrides]]
module = ["marimo", "altair", "polars", "pandas"]
ignore_missing_imports = true
